Fix navbar element alignment

--- a/frontend/src/assets/stylesheets/variables.css
+++ b/frontend/src/assets/stylesheets/variables.css
@@ -7,7 +7,7 @@
   --switch-on-color:  #1E824C;
   --switch-off-color: #f04124;
 
-  --navbar-height: 70px;
+  --navbar-height: 60px;
 
   --header-cell-color:            white;
   --header-cell-background-color: #5a6673;
